--- a/package.json
+++ b/package.json
@@ -42,6 +42,6 @@
     "typescript": "4.6.4"
   },
   "lint-staged": {
-    "*.js": "eslint --cache --fix"
+    "*.{js,jsx,ts,tsx}": "eslint --fix"
   }
 }
