--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "remark": "^14.0.2",
-    "remark-html": "^15.0.1"
+    "remark-html": "^15.0.1",
+    "tailwind-styled-components": "^2.1.7"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.2.4",
