build: add nodemailer library

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "gray-matter": "^4.0.3",
     "next": "12.1.6",
+    "nodemailer": "^6.7.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "remark": "^14.0.2",
@@ -26,6 +27,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@types/node": "17.0.33",
+    "@types/nodemailer": "^6.4.4",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
