--- a/.eslintignore
+++ b/.eslintignore
@@ -2,6 +2,7 @@ node_modules/
 .eslintrc.js
 __tests__/
 commitlint.config.js
+next-sitemap.config.js
 jest.config.js
 postcss.config.js
 tailwind.config.js
