--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "18.1.0",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
+    "remark-prism": "^1.3.6",
     "tailwind-styled-components": "^2.1.7"
   },
   "devDependencies": {
@@ -32,6 +33,7 @@
     "@types/nodemailer": "^6.4.4",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
+    "@types/remark-prism": "^1.3.3",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "autoprefixer": "^10.4.7",
