--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "gray-matter": "^4.0.3",
     "next": "12.1.6",
+    "next-pwa": "^5.5.4",
     "next-sitemap": "^3.0.5",
     "nodemailer": "^6.7.5",
     "react": "18.1.0",
