--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,6 @@
 {
- "name": "App",
+ "name": "gBoole01 App",
+ "short_name": "App",
  "icons": [
   {
    "src": "\/android-icon-36x36.png",
@@ -37,5 +38,10 @@
    "type": "image\/png",
    "density": "4.0"
   }
- ]
+ ],
+  "theme_color": "#FFFFFF",
+  "background_color": "#FFFFFF",
+  "start_url": "/",
+  "display": "standalone",
+  "orientation": "portrait"
 }
