--- a/.eslintignore
+++ b/.eslintignore
@@ -3,6 +3,7 @@ node_modules/
 __tests__/
 commitlint.config.js
 next-sitemap.config.js
+next.config.js
 jest.config.js
 postcss.config.js
 tailwind.config.js
