--- a/.eslintignore
+++ b/.eslintignore
@@ -1,6 +1,7 @@
-node_modules/
-.eslintrc.js
 __tests__/
+node_modules/
+public
+.eslintrc.js
 commitlint.config.js
 next-sitemap.config.js
 next.config.js
