--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
     "remark-prism": "^1.3.6",
+    "sharp": "^0.30.6",
     "tailwind-styled-components": "^2.1.7"
   },
   "devDependencies": {
