--- a/public/manifest.json
+++ b/public/manifest.json
@@ -37,6 +37,12 @@
    "sizes": "192x192",
    "type": "image\/png",
    "density": "4.0"
+  },
+  {
+    "src": "\/images/logo-512.png",
+    "type": "image/png",
+    "sizes": "512x512",
+    "purpose": "any maskable"
   }
  ],
   "theme_color": "#FFFFFF",
