--- a/package.json
+++ b/package.json
@@ -13,18 +13,19 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@nextui-org/react": "^1.0.0-beta.12",
     "gray-matter": "^4.0.3",
     "next": "12.1.6",
     "next-pwa": "^5.5.4",
     "next-sitemap": "^3.0.5",
+    "next-themes": "^0.2.1",
     "nodemailer": "^6.7.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
     "remark-prism": "^1.3.6",
-    "sharp": "^0.30.6",
-    "tailwind-styled-components": "^2.1.7"
+    "sharp": "^0.30.6"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.2.4",
@@ -39,7 +40,6 @@
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "@vitejs/plugin-react": "^1.3.2",
-    "autoprefixer": "^10.4.7",
     "c8": "^7.11.3",
     "eslint": "8.15.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -49,8 +49,6 @@
     "eslint-plugin-import": "^2.26.0",
     "husky": "^8.0.1",
     "lint-staged": "^12.4.1",
-    "postcss": "^8.4.13",
-    "tailwindcss": "^3.0.24",
     "typescript": "4.6.4",
     "vitest": "^0.15.1"
   },
