--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemailer": "^6.7.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-icons": "^4.7.1",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
     "remark-prism": "^1.3.6",
