--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^1.0.0-beta.12",
+    "@sendgrid/mail": "^7.7.0",
     "gray-matter": "^4.0.3",
     "next": "12.1.6",
     "next-pwa": "^5.5.4",
