--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "gray-matter": "^4.0.3",
     "next": "12.1.6",
     "next-pwa": "^5.5.4",
