--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "prepare": "husky install"
     },
     "dependencies": {
+        "@nextui-org/react": "^1.0.0-beta.12",
         "@sendgrid/mail": "^7.7.0",
         "gray-matter": "^4.0.3",
         "next": "12.1.6",
