--- a/package.json
+++ b/package.json
@@ -20,14 +20,13 @@
         "next-pwa": "^5.5.4",
         "next-sitemap": "^3.0.5",
         "next-themes": "^0.2.1",
-        "nodemailer": "^6.7.5",
         "react": "18.1.0",
         "react-dom": "18.1.0",
         "react-icons": "^4.7.1",
+        "react-markdown": "^8.0.5",
+        "react-syntax-highlighter": "^15.5.0",
         "remark": "^14.0.2",
-        "remark-html": "^15.0.1",
-        "remark-prism": "^1.3.6",
-        "sharp": "^0.30.6"
+        "remark-gfm": "^3.0.1"
     },
     "devDependencies": {
         "@commitlint/cli": "^16.2.4",
@@ -35,10 +34,9 @@
         "@next/eslint-plugin-next": "^12.1.6",
         "@testing-library/react": "^13.2.0",
         "@types/node": "17.0.33",
-        "@types/nodemailer": "^6.4.4",
         "@types/react": "18.0.9",
         "@types/react-dom": "18.0.4",
-        "@types/remark-prism": "^1.3.3",
+        "@types/react-syntax-highlighter": "^15.5.6",
         "@typescript-eslint/eslint-plugin": "^5.23.0",
         "@typescript-eslint/parser": "^5.23.0",
         "@vitejs/plugin-react": "^1.3.2",
