--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "next-sitemap": "^3.0.5",
         "next-themes": "^0.2.1",
         "react": "18.1.0",
+        "react-aria": "^3.22.0",
         "react-dom": "18.1.0",
         "react-icons": "^4.7.1",
         "react-markdown": "^8.0.5",
