--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@commitlint/config-conventional": "^16.2.4",
         "@next/eslint-plugin-next": "^12.1.6",
         "@testing-library/react": "^13.2.0",
+        "@types/gtag.js": "^0.0.12",
         "@types/node": "17.0.33",
         "@types/react": "18.0.9",
         "@types/react-dom": "18.0.4",
